Spacing for labels in MainMenuViewController.

--- a/CatchMe/Storyboard.storyboard
+++ b/CatchMe/Storyboard.storyboard
@@ -1160,14 +1160,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Longitude:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O4b-97-W8D">
-                                <rect key="frame" x="56" y="207" width="80" height="21"/>
+                                <rect key="frame" x="45" y="207" width="91" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Latitude:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Sfn-FZ-VFI">
-                                <rect key="frame" x="70" y="235" width="66" height="21"/>
+                                <rect key="frame" x="59" y="235" width="80" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -1304,6 +1304,134 @@
         <image name="first.png" width="30" height="30"/>
         <image name="second.png" width="30" height="30"/>
     </resources>
+    <classes>
+        <class className="AlertSettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AlertSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="dismissKeyboard"/>
+                <relationship kind="action" name="saveInfo"/>
+                <relationship kind="outlet" name="audioNotification" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="invalidTimeDelay" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="timeDelayTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="vibrationNotification" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="AudioSettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AudioSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="changeVolume"/>
+                <relationship kind="action" name="defaultSound"/>
+                <relationship kind="action" name="playSound"/>
+                <relationship kind="action" name="recordSound"/>
+                <relationship kind="action" name="saveSound"/>
+                <relationship kind="action" name="stopSound"/>
+                <relationship kind="outlet" name="audioMessageStatus" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="defaultButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="recordButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="stopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="volumeSlider" candidateClass="UISlider"/>
+            </relationships>
+        </class>
+        <class className="ContactAddViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactAddViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelButton:"/>
+                <relationship kind="action" name="doneButton:"/>
+                <relationship kind="outlet" name="emailF" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="nameF" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="numberF" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="numberField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="shouldcall" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="shouldemail" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="shouldsms" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="ContactEditViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactEditViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="contactDataChange:"/>
+                <relationship kind="outlet" name="email" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="name" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="number" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="numberField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="shouldcall" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="shouldemail" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="shouldsms" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="ContactsListViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButton:"/>
+            </relationships>
+        </class>
+        <class className="MainMenuViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainMenuViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="activateAccelerometer"/>
+                <relationship kind="outlet" name="latitude" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="longitude" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="systemStatusSwitch" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="MedicalConditionsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MedicalConditionsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="goBackToMenu"/>
+                <relationship kind="outlet" name="medicalConditions" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="personalInfo" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="MedicalInfoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MedicalInfoViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="saveChanges"/>
+                <relationship kind="outlet" name="medicalTextView" candidateClass="UITextView"/>
+            </relationships>
+        </class>
+        <class className="MessageSettingsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MessageSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="defaultMessage"/>
+                <relationship kind="action" name="saveChanges"/>
+                <relationship kind="outlet" name="emailStatus" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="messageTextView" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="textMessageStatus" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+        <class className="PersonalInfoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonalInfoViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelChanges"/>
+                <relationship kind="action" name="saveInfo"/>
+                <relationship kind="outlet" name="addressTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="careCardTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="dayTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="firstNameTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="invalidCardNum" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="invalidDate" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastNameTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="monthTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="yearTextField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="SettingsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingsViewController.h"/>
+        </class>
+        <class className="TPKeyboardAvoidingScrollView" superclassName="UIScrollView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TPKeyboardAvoidingScrollView.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
